--- a/.env.local
+++ b/.env.local
@@ -1,21 +1,19 @@
-# Local Development Environment Variables
+# Local Development Environment Variables Template
 # Copy this file to .env and update with your actual values
 
 # Django Settings
 DEBUG=True
 SECRET_KEY=django-insecure-local-development-key-only
 
-# Supabase Configuration (Optional for local development)
-# Get these from your Supabase project settings
-SUPABASE_URL=your_supabase_project_url
-SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_KEY=your_supabase_service_key
+# Azure PostgreSQL Database (Optional for local development)
+# Uncomment and update if you want to connect to Azure PostgreSQL locally
+# DATABASE_URL=postgresql://decipheradmin:PASSWORD@decipherworld-db-server-ci01.postgres.database.azure.com:5432/decipherworld?sslmode=require
 
-# Database (if you want to use Supabase PostgreSQL locally)
-# DB_NAME=your_db_name
-# DB_USER=your_db_user  
-# DB_PASSWORD=your_db_password
-# DB_HOST=your_db_host
+# Alternative: Individual Azure database variables
+# DB_NAME=decipherworld
+# DB_USER=decipheradmin
+# DB_PASSWORD=your_password
+# DB_HOST=decipherworld-db-server-ci01.postgres.database.azure.com
 # DB_PORT=5432
 
 # Email Settings (Optional)
