Simplify the code

--- a/.gitignore
+++ b/.gitignore
@@ -57,8 +57,18 @@ npm-debug.log*
 LogFiles/
 deployments/
 webapp-logs.zip
+recent_logs.zip
 *.zip
 .deployment
+
+# Development and test files
+dev.py
+test_form.py
+verify_azure.sh
+azure-setup.md
+README.dev.md
+AZURE_DEPLOYMENT_GUIDE.md
+SEO_SETUP_GUIDE.md
 
 # Azure deployment artifacts
 decipherworld-deployment.zip
